[package]
name = "xxc"
version = "0.1.0"
authors = ["Milan Markovic <zivotinja@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "*"

[[bin]]
name = "xxc"
path = "src/main.rs"

[[bin]]
name = "colors_auto"
path = "src/auto.rs"


[[bin]]
name = "colors_mpegts"
path = "src/mpegts.rs"

[profile.release]
